--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ div#inner {
 /* ---------------------------- Sub page rules -------------------------------- */
 
 .sub-page h1 {
+  text-align: center;
   font-size: 2em;
 }
 
@@ -115,4 +116,20 @@ div#inner {
 .sub-page img {
 	width: 100%;
 	display: block;
+}
+
+.sub-page table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.sub-page td, th {
+  border: 1px solid #304070;
+  text-align: left;
+  padding: 8px;
+}
+
+.sub-page tr:nth-child(even) {
+  background-color: #425085;
 }
